src/components/portfolioSection/portfolioSection.css
.portfolio {
  /* height: 100%; */
  height: 500dvh;
  /* height: 600vh; */
  position: relative;
}

.pList {
  position: sticky;
  top: 0;
  display: flex;
  height: 100dvh;
  /* width: 500dvw; */
  /* width: fit-content; */
  width: max-content;
}

.pProgress {
  position: sticky;
  width: 80px;
  height: 80px;
  left: 0;
  bottom: 80%;
}

.pItem {
  height: 100dvh;
  width: 100dvw;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px;
}

body[data-theme="dark"] .pList .pItem:nth-child(2) {
  /* background: green; */
  background: linear-gradient(to right, #170e2a, #290f46);
}
body[data-theme="dark"] .pItem:nth-child(3) {
  /* background: red; */
  background: linear-gradient(to right, #290f46, #35135d);
}
body[data-theme="dark"] .pItem:nth-child(4) {
  /* background: blue; */
  background: linear-gradient(to right, #35135d, #3c126d);
}
body[data-theme="dark"] .pItem:nth-child(5) {
  /* background: yellow; */
  background: linear-gradient(to right, #3c126d, #42107b);
}
body[data-theme="dark"] .pItem:nth-child(6) {
  /* background: pink; */
  background: linear-gradient(to right, #42107b, #2f204e);
}

.pImg {
  width: 40%;
}

.slider-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
}

.slider-container img:focus-visible,
.slideImgContainer:focus-visible {
  outline: none;
}

.slideImgContainer {
  padding: 0 10px;
}

.slick-arrow.slick-prev,
.slick-arrow.slick-next {
  color: var(--text-emphasis);
  height: 30px;
  width: 30px;
}

.slick-arrow.slick-prev:hover,
.slick-arrow.slick-next:hover {
  color: var(--text-primary);
  transition: color 0.3s ease-in-out;
}

.slick-dots li button:before {
  color: var(--text-emphasis);
  opacity: 0.5;
}

.slick-dots li.slick-active button:before {
  color: var(--text-emphasis);
  opacity: 1;
}

.pText {
  width: 40%;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.pText h1 {
  font-size: 56px;
}

.pText p {
  font-weight: 300;
  text-align: justify;
  color: var(--text-secondary);
  font-size: 16px;
}

.pLinks button {
  background-color: var(--text-emphasis);
  padding: 12px;
  border-radius: 10px;
  border: none;
  font-weight: 500;
  cursor: pointer;
  color: black;
}

.pLinks {
  display: flex;
  justify-content: center;
  gap: 36px;
}

@media (max-width: 1536px) {
  .pItem {
    gap: 50px;
  }
}

@media (max-width: 1280px) {
  .pText h1 {
    font-size: 48px;
  }
}

@media (max-width: 1024px) {
  .pItem {
    flex-direction: column;
  }
  .pImg,
  .pText {
    width: 80%;
  }
  .pProgress {
    bottom: 100px;
    left: 100%;
    width: 60px;
    height: 60px;
  }
  .pText {
    align-items: center;
  }
  .pText h1 {
    font-size: 36px;
    text-align: center;
  }
}

@media (max-width: 768px) {
  .pProgress {
    width: 50px;
    height: 50px;
  }
  .pText h1 {
    font-size: 26px;
  }
}

@media (max-width: 450px) {
  .pText h1 {
    font-size: 24px;
  }
  .pText p {
    font-size: 14px;
  }
  .pProgress {
    width: 40px;
    height: 40px;
  }
}

